<resources>
    <string name="app_name">Cybersec</string>
    <string name="button">Button</string>
    <string name="page_title">CyberSec</string>
    <string name="home">home</string>
    <string name="settings">settings</string>
    <string name="title_settings">Settings</string>
    <string name="frag1">Home</string>
    <string name="frag2">Settings</string>
    <string name="more">more</string>
    <string name="log_out">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="application_security">Application Security</string>
    <string name="cloud_security">Cloud Security</string>
    <string name="data_security">Data Security</string>
    <string name="linux_essentials">Linux Essentials</string>
    <string name="wapt_security">Web App Pen-Testing</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="username">Username</string>
    <string name="description">Description</string>
    <string name="network_security">Network Security</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="btn_sign_in">btn_sign_in</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_here">New Here?</string>
    <string name="already_registered">Already Registered?</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password_btn">forgot_password_btn</string>
    <string name="hyperlink"><a href="https://www.kaspersky.com/resource-center/definitions/what-is-an-ip-address">IP</a></string>
</resources>